Closed Bug 1747091 Opened 2 years ago Closed 2 years ago

Temporarily revert the CSS behavior change that causes bug 1746841

Categories

(Core :: CSS Parsing and Computation, defect)

defect

Tracking

()

VERIFIED FIXED
97 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox95 --- unaffected
firefox96 --- verified
firefox97 --- verified

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

No description provided.
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9d89c3ba750a
Force CSS with moz-extension schemes to get revalidated temporarily. r=rpl
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch

Hi Emilio,
Are you going to create the request to uplift to beta 96 this short term fix or do you prefer that we do?
I have just updated the tracking flags on this bug to reflect the status across the tracked Firefox versions, I hope you don't mind.
(both it is fine by us, I mainly wanted to be sure that we are tracking this for 96 beta and everything is ready for the uplift request, before I'll be afk next week).

In terms of the status of the follow up we agreed on:

  • yesterday I have attached to Bug 1746841 a proposed patch for the longer term fix and better test coverage
  • once that patch is finalized and signed off, I can either:
    • attach a separate patch that reverts 9d89c3ba750a and add you as a blocking reviewer on that one
    • or, if you prefer, needinfo-ing you to let you know that you can clear out the short term workaround right after the long term fix got on central.

Thanks again for your prompt help with handling this regression, I really appreciated it.

Flags: needinfo?(emilio)

Comment on attachment 9256391 [details]
Bug 1747091 - Force CSS with moz-extension schemes to get revalidated temporarily. r=rpl,mixedpuppy

Beta/Release Uplift Approval Request

  • User impact if declined: See blocked bug. This returns to our previous behavior temporarily while we work on a more thorough fix.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: See bug 1746841 comment 16.
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Trivial patch to return to pre-regression behavior.
  • String changes made/needed: none
Flags: needinfo?(emilio)
Attachment #9256391 - Flags: approval-mozilla-beta?
Flags: qe-verify+

(In reply to Luca Greco [:rpl] [:luca] [:lgreco] from comment #4)

Hi Emilio,
Are you going to create the request to uplift to beta 96 this short term fix or do you prefer that we do?

Hey, sure, I don't mind either way, so I just did above :)

In terms of the status of the follow up we agreed on:

  • yesterday I have attached to Bug 1746841 a proposed patch for the longer term fix and better test coverage
  • once that patch is finalized and signed off, I can either:
    • attach a separate patch that reverts 9d89c3ba750a and add you as a blocking reviewer on that one
    • or, if you prefer, needinfo-ing you to let you know that you can clear out the short term workaround right after the long term fix got on central.

Again, either way works, or feel free to revert this patch as part of your other patch and I'm happy to rubber-stamp it :)

Thanks again for your prompt help with handling this regression, I really appreciated it.

No problem, happy to help!

Comment on attachment 9256391 [details]
Bug 1747091 - Force CSS with moz-extension schemes to get revalidated temporarily. r=rpl,mixedpuppy

Approved for 96.0b9

Attachment #9256391 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

I have succeeded in reproducing this issue using the following steps:

  1. Download the V1 and V2 extensions from the blocked bug
  2. go to about:debugging#/runtime/this-firefox
  3. Click the "Load Temporary Add-on..."
  4. Load extension V1.
  5. Click o the addon icon (puzzle piece)
    Notice that the dropdown is red-colored and has a red-colored puzzle piece.
  6. Click the "Load Temporary Add-on..."
  7. Load extension V2.
  8. Click o the addon icon (puzzle piece)
    Expected: The dropdown has a green-colored background and a red-colored puzzle piece; the logo will turn green after a while.
    Actual: The dropdown has a RED-colored and a RED-colored puzzle piece; the logo will turn green after a while.

Reproduced in Nightly v97.0a1 (2021-12-15) and verified in Nightly v97.0a1 (2021-12-27) and Beta v96.0b9 in Win 10, Ubuntu 20.04.3LTS and Mac OS 11.6.2.

In conclusion, the only thing that changes with the fix is the background of the addons drop-down. Is that the intended fix?
If not, please correct the steps to reproduce in order to verify it properly.

Flags: needinfo?(emilio)

Yes, that's right. Images are expected to have that behavior for now, see the blocked bug. Thanks!

Flags: needinfo?(emilio)

Great! I will then close this bug as verified fixed. Thanks!

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: