Bug 1747091 - Force CSS with moz-extension schemes to get revalidated temporarily. r=rpl

See bug 1746841 comment 11 for the right fix instead.

Differential Revision: https://phabricator.services.mozilla.com/D134424